# debt-recovery-env

./: .gitignore  README.md  SUBMISSION.md  app.py  generate_profiles.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.bat
baseline/: baseline_agent.py  prompt_templates.py  run_baseline.py
dashboard/: build_dashboard.py  index.html
data/: borrower_profiles.json  scenario_seeds.json
env/: __init__.py  borrower_simulator.py  environment.py  models.py  portfolio_manager.py  regulatory_engine.py  reward_engine.py
server/: app.py
tasks/: __init__.py  graders.py  task1_easy.py  task2_medium.py  task3_hard.py
tests/: test_env.py  test_graders.py  test_regulatory.py
